feat(chat-groups): update controller and DTO for joining char groups
